feat(integrations): support github org token auth
